# scope

./: pyproject.toml
frontend/: package-lock.json
src/scope/core/pipelines/: __init__.py  registry.py
src/scope/core/pipelines/gemma_prompt/: __init__.py  pipeline.py  schema.py
src/scope/server/: pipeline_manager.py  webrtc.py
